crates/plotnik-lib/tests/02-parser/recovery_incomplete/missing_subtype.txt
Q = (expression/)
------------------ DIAGNOSTICS -------------------
error: expected a subtype after `/`
 --> query.ptk:1:17
  |
1 | Q = (expression/)
  |                 ^
  |
help: e.g., `expression#binary_expression`
